feat(wasm-privacy-coin): thread owned flag into shardtree retention
Per-commitment ownership booleans are now threaded from the proto wire
format into the Rust shardtree append path. Owned leaves are assigned
Retention::Marked so the shardtree preserves their witness paths;
non-owned leaves remain Retention::Ephemeral (or Checkpoint for the
last commitment in a block).

Ticket: CSHLD-1208